--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,409 @@
 */
 
 .page {
+  display: flex;
+  flex-direction: column;
+  padding-block: 100px;
+  color: var(--accent-color);
+  font-family: var(--main-font), sans-serif;
+  font-size: 18px;
+  background-color: var(--bg-color);
+  background-image: repeating-linear-gradient(
+      to right,
+      var(--gradient-line-color) 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(
+      var(--gradient-line-color) 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(
+      var(--gradient-from-color) 0.01%,
+      var(--gradient-to-color)
+    );
+  background-size: cover;
+  background-attachment: fixed;
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-variation-settings: "wght" var(--text-weight), "wdth" 100, "opsz" 0;
+}
+
+.section-size {
+  margin: 0 auto;
+  inline-size: max(100%, 375px);
+  max-inline-size: 700px;
+}
+
+.section-style {
+  border: 2px solid var(--accent-color);
+  background-color: var(--bg-color);
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-block-end: 100px;
+  padding-block-start: min(calc(120px + 1.1%), 136px);
+  padding-block-end: 25px;
+  font-family: var(--accent-font), sans-serif;
+  text-transform: uppercase;
+}
+
+@media (width <= 375px) {
+  .header {
+    padding-block-start: 120px;
+  }
+}
+
+.header__logo {
+  margin-block-end: 20px;
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+}
+
+.header__title {
+  margin-block-end: 25px;
+  font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+}
+
+.theme-menu__list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 7px;
+  max-block-size: 70px;
+}
+
+.theme-menu__button {
+  position: relative;
+  border: none;
+  padding-inline-start: calc(16px + 3px);
+  color: inherit;
+  font-family: inherit;
+  font-size: 14px;
+  text-transform: uppercase;
+  background-color: transparent;
+  transition: opacity 0.3s ease;
+  cursor: pointer;
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
+}
+
+.theme-menu__button:disabled {
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+  pointer-events: none;
+}
+
+.theme-menu__button:disabled::before {
+  content: "▶";
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.6;
+  animation: arrow 0.5s ease-in-out infinite alternate;
+  inline-size: 16px;
+  block-size: 13px;
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+}
+
+.theme-menu__button::after {
+  content: "";
+  display: block;
+  background-color: var(--accent-color);
+  transition: transform 0.3s ease;
+  transform: scale(0);
+  transform-origin: left;
+  inline-size: 100%;
+  block-size: 2px;
+}
+
+.theme-menu__button:focus-visible::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+
+.content__card {
+  display: flex;
+  flex-direction: column;
+  margin-block-end: 51px;
+  padding-block-end: 25px;
+}
+
+@media (width <= 375px) {
+  .content__card {
+    margin-block-end: 52px;
+  }
+}
+
+.content__card-title {
+  border-block-end: 2px solid var(--accent-color);
+  padding-inline: 10px;
+  padding-block-start: clamp(0.1875rem, 0.1655rem + 0.0939vw, 0.25rem);
+  padding-block-end: clamp(0.375rem, 0.441rem + -0.2817vw, 0.1875rem);
+  font-size: 18px;
+  line-height: 22px;
+  font-variation-settings: "wght" var(--title-weight), "wdth" 100, "opsz" 0;
+}
+
+.content__card-img-wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-inline: auto;
+  margin-block-end: 25px;
+  border-block-end: 2px solid var(--accent-color);
+  overflow: hidden;
+  inline-size: 100%;
+  aspect-ratio: 1 / 1;
+}
+
+.content__card-img-lable {
+  position: absolute;
+  top: 25px;
+  right: 3.5%;
+  z-index: 1;
+  align-self: flex-end;
+  opacity: 0.5;
+  color: var(--accent-color);
+  font-family: var(--accent-font), sans-serif;
+  font-size: 14px;
+  text-shadow: -1px 0 var(--bg-color), 0 1px var(--bg-color),
+    1px 0 var(--bg-color), 0 -1px var(--bg-color);
+  mix-blend-mode: hard-light;
+}
+
+@supports (
+  (text-stroke: 1px var(--bg-color)) or
+    (-webkit-text-stroke: 1px var(--bg-color))
+) {
+  .content__card-img-lable {
+    text-shadow: none;
+    -webkit-text-stroke: 1px var(--bg-color);
+    text-stroke: 1px var(--bg-color);
+  }
+}
+
+@media (width <= 375px) {
+  .content__card-img-lable {
+    right: 13px;
+  }
+}
+
+.content__card-img {
+  display: block;
+  object-fit: cover;
+  object-position: center;
+  inline-size: 100%;
+  block-size: 100%;
+}
+
+.sign {
+  filter: saturate(55%);
+}
+
+.mini {
+  filter: grayscale(70%);
+}
+
+.tabletop {
+  filter: brightness(70%);
+}
+
+.sky {
+  filter: contrast(50%);
+}
+
+.text {
+  filter: invert(100%);
+}
+
+.food {
+  filter: sepia(0.4) saturate(120%) contrast(120%);
+}
+
+.drink {
+  filter: hue-rotate(0.7turn) blur(3px);
+}
+
+.root {
+  filter: sepia(0.3) brightness(70%);
+}
+
+.content__card-text {
+  margin-block-end: 27px;
+  padding-inline: 25px;
+  line-height: 21px;
+}
+
+.content__card-text:last-of-type {
+  margin-block-end: 25px;
+}
+
+.flex-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  margin-inline-end: 25px;
+  max-block-size: 38px;
+}
+
+.card__icon-button {
+  margin-inline-end: 4px;
+  border: none;
+  border: 2px solid transparent;
+  padding-inline: 0;
+  background-color: transparent;
+  transition: border 0.3s ease;
+  cursor: pointer;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border: 2px solid var(--accent-color);
+}
+
+.like-icon {
+  inline-size: 100%;
+  block-size: 100%;
+}
+
+.card__like-button {
+  text-align: center;
+  min-inline-size: 130px;
+}
+
+.content__button {
+  position: relative;
+  font-family: var(--accent-font), sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 90%;
+  transition: box-shadow 0.3s ease;
+  cursor: pointer;
+}
+
+.content__button:focus {
+  outline: none;
+}
+
+.content__button:focus-visible {
+  box-shadow: 2px 2px 0 0 var(--accent-color);
+}
+
+.content__button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  background-color: var(--accent-color);
+  transition: transform 0.5s ease-in-out;
+  transform: scaleX(0);
+  transform-origin: left;
+  inline-size: 100%;
+  block-size: 100%;
+}
+
+.content__button:hover::before {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+
+.button__text {
+  color: var(--button-text-color);
+  mix-blend-mode: difference;
+}
+
+.content__save {
+  display: flex;
+}
+
+.content__save-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  margin: 0 auto;
+  padding: 15.5px 18px;
+}
+
+@media (width <= 375px) {
+  .content__save-button {
+    flex-direction: column;
+  }
+}
+
+.content__save-button svg {
+  color: var(--button-text-color);
+  inline-size: 21px;
+  block-size: 21px;
+  mix-blend-mode: difference;
+}
+
+@media (width <= 375px) {
+  .content__save-button svg {
+    inline-size: 28px;
+    block-size: 28px;
+  }
+}
+
+.content__save-dialog {
+  padding-inline: 30px;
+  padding-block: 30px;
+  max-inline-size: 353px;
+}
+
+@media (width <= 375px) {
+  .content__save-dialog {
+    padding-inline: 42px;
+    max-inline-size: 343px;
+  }
+}
+
+.content__save-dialog-title {
+  color: var(--accent-color);
+  font-family: var(--accent-font), sans-serif;
+  font-weight: var(--text-weight);
+  font-size: 14px;
+  line-height: 150%;
+  text-transform: uppercase;
+}
+
+.content__save-dialog-wrapper {
+  display: grid;
+  grid-template-columns: min-content auto;
+  align-items: center;
+  column-gap: 20px;
+  margin-inline: auto;
+  margin-block-end: 30px;
+}
+
+dialog::backdrop {
+  background-color: rgb(0 0 0 / 0.75);
+}
+
+.content__save-dialog-button {
+  padding-block: 10.5px;
+  text-transform: uppercase;
+  inline-size: 100%;
+}
+
+.content__save-dialog svg {
+  display: block;
+  color: var(--button-text-color);
+  inline-size: 39px;
+  block-size: 39px;
+  mix-blend-mode: difference;
 }
