--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,65 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-dark {
+  --text-weight: 465;
+  --title-weight: 785;
+  --bg-color: #000;
+  --accent-color: #00cc14;
+  --gradient-line-color: #000;
+  --gradient-from-color: #007f0c;
+  --gradient-to-color: #004306;
+  --button-text-color: #00cc14;
+  --heart-color: #ff0000;
+  --heart-core-color: #fff;
+  --heart-line-color: #00cc14;
+}
+
+.page.theme-dark {
+  background-image: repeating-linear-gradient(
+      to right,
+      var(--gradient-line-color) 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(
+      var(--gradient-line-color) 0 2px,
+      transparent 2px 4px
+    ),
+    repeating-linear-gradient(
+      var(--gradient-from-color),
+      var(--gradient-to-color)
+    );
+}
+
+@media (prefers-color-scheme: dark) {
+  :root.theme-auto {
+    --text-weight: 465;
+    --title-weight: 785;
+    --bg-color: #000;
+    --accent-color: #00cc14;
+    --gradient-line-color: #000;
+    --gradient-from-color: #007f0c;
+    --gradient-to-color: #004306;
+    --button-text-color: #00cc14;
+    --heart-color: #ff0000;
+    --heart-core-color: #fff;
+    --heart-line-color: #00cc14;
+  }
+
+  .page.theme-auto {
+    background-image: repeating-linear-gradient(
+        to right,
+        var(--gradient-line-color) 0 2px,
+        transparent 2px 4px
+      ),
+      repeating-linear-gradient(
+        var(--gradient-line-color) 0 2px,
+        transparent 2px 4px
+      ),
+      repeating-linear-gradient(
+        var(--gradient-from-color),
+        var(--gradient-to-color)
+      );
+  }
+}
