--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,16 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  --main-font: "Inter Variable", sans-serif;
+  --accent-font: "Press Start 2P", sans-serif;
+  --text-weight: 400;
+  --title-weight: 700;
+  --bg-color: #fff;
+  --accent-color: #000;
+  --gradient-line-color: #d3d3d3;
+  --gradient-from-color: #e7e7e7;
+  --gradient-to-color: #1a1a1a;
+  --button-text-color: #fff;
+  --heart-color: #ff0000;
+  --heart-core-color: #fff;
+  --heart-line-color: #000;
+}
